--- a/CPU-Simulation/pom.xml
+++ b/CPU-Simulation/pom.xml
@@ -31,6 +31,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- Command Line Interface -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
 
 		<!-- Logging -->
 		<dependency>
@@ -67,7 +73,7 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
-		
+
 		<!-- Build for testing -->
 		<testResources>
 			<testResource>
@@ -81,7 +87,7 @@
 				<filtering>true</filtering>
 			</testResource>
 		</testResources>
-		
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -93,7 +99,7 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
