--- a/CPU-Simulation/pom.xml
+++ b/CPU-Simulation/pom.xml
@@ -118,6 +118,21 @@
 				</executions>
 			</plugin>
 		</plugins>
+		
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>ch.zhaw.lazari.cpu.App</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 	</build>
 
 	<reporting>
